--- a/css/style.css
+++ b/css/style.css
@@ -16,18 +16,28 @@ header {
 
 nav {
     background-color: #C4EEF2;
-    padding: 15px;    
+    padding: 15px;
+    text-align: center;    
+}
+
+
+nav ul li {
+    display: inline;
+    margin: 60px;
+}
+
+nav ul li a {
+    display: inline-block;
+    color: #A67458;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
 }
 
 a {
-    color: #A67458;
     text-decoration: none;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    margin: auto 90px auto 250px;
 }
 
-h1 {
+.titulo-principal {
     color: #ffffff;
     font-size: 28pt;
     
@@ -40,13 +50,17 @@ h3 {
 section {
     background-color: #7AB8BF;
     border-radius: 20px;
-    margin: 50px auto 50px auto;
+    margin: 70px auto 70px auto;
     padding: 15px;
 }
 
 p {
     color: #ffffff;
     padding: 10px;
+}
+
+.card {
+    color: black;
 }
 
 .secoes {
@@ -62,4 +76,29 @@ footer {
     color: #ffffff;
     text-align: center;
     padding: 15px
+}
+
+@media only screen and (max-width: 700px) {
+    nav ul li {
+        margin: 8px;
+    }    
+}
+
+.button {
+    border: 0;
+    border-radius: 10px;
+    color: #245358;
+    padding: 15px;
+    font-weight: bold;
+}
+
+
+.button:hover {
+    cursor: pointer;
+    color: #ffffff;
+    background-color: #113d4279;
+}
+
+.button-li > a:hover {
+    color: #d99c79;
 }
